--- a/firebase.json
+++ b/firebase.json
@@ -4,9 +4,17 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "site": "art-exhibition-curator",
-
-    "public": "dist"
-    
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
